search button alignment fixed

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -105,7 +105,7 @@ body {
                 }
                 div{
                     display: flex;
-                    gap: 1.5rem;
+                    // gap: 1.5rem;
                     i{
                         transition: all 0.5s;
                         cursor: pointer;
